# openbis-upload-helper

./: .gitignore  README.md  docker-compose.docs.yml  manage.py  pyproject.toml  settings.ini.example
.envs/.local/: .django  .postgres
.github/workflows/: actions.yml
appes/: apps.py
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
openbis_upload_helper/: conftest.py
openbis_upload_helper/app/: admin.py  apps.py  models.py  tests.py  views.py
openbis_upload_helper/app/static/css/: style.css
openbis_upload_helper/app/templates/: homepage.html  login.html
openbis_upload_helper/app/utils/: __init__.py  utils.py
openbis_upload_helper/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
openbis_upload_helper/templates/: base.html
openbis_upload_helper/uploader/: settings.ini.example  settings.py  urls.py
openbis_upload_helper/uploader/entry_points/: __init__.py  load.py
openbis_upload_helper/users/: adapters.py  apps.py  models.py  views.py
openbis_upload_helper/users/migrations/: 0001_initial.py
openbis_upload_helper/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
tests/: conftest.py  test_views.py
